[package]
name = "cap-parser"
version = "0.1.0"
authors = ["Joey Sacchini <joey@sacchini.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "5"
derivative = "2.1.1"
image = "0.23.6"
leptess = "0.8.2"
threadpool = "1.8.1"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.3.2"